--- a/index.html
+++ b/index.html
@@ -180,6 +180,12 @@
   <span onclick="document.getElementById('importFile').click()" style="cursor: pointer; color: #007bff; text-decoration: underline;">📥 Import progress</span>
   <input type="file" id="importFile" accept=".json" style="display: none;" onchange="importProgress(event)">
 </div>
+	
+<div style="margin-bottom: 0.5em;">
+   <p style="margin: 0.2em 0 0 0; font-size: 0.8rem; color: #666;">
+    This is Wordmu Level 2. Make sure to import your Level 2 progress.
+  </p>
+</div>
 
  <script>
 let isAllDone = false;
