--- a/index.html
+++ b/index.html
@@ -259,8 +259,7 @@ function showWord() {
       updatePhaseMessage(true);
     } else {
       document.getElementById("word").innerHTML = `
-  <div style="margin-bottom: 0.1px;">Well done!🎉</div>
-  <div style="font-size: 0.6em; margin-top: 0;">Level 2 is coming</div>
+  <div style="margin-bottom: 0.1px;">🎉Well done!👏</div>
 `;
       updateCounter();
       updatePhaseMessage(false);
